part1/ex107/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: print-uuid
  labels:
      name: print-uuid-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          serviceName: print-uuid-http
          servicePort: 2345
